gccida/c3/tidy_fallthru_edge
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1524:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1524:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1529:43: error: expected expression
if ( real_insn == next_real_insn( *( rtx *)&c->head[1]) ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1535:13: error: expected ';' after expression
end = ( rtx)end[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1535:13: error: expected 'while' in do/while loop
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1534:1: note: to match this 'do'
do 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1538:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)c->head[1]; 
                         ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1552:1: error: use of undeclared identifier 'v8'
v8 = delete_insn( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/cfgrtl.c:1554:7: error: use of undeclared identifier 'v8'
rtx = v8; 
      ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/tidy_fallthru_edge/src/obj/cfgrtl.o] Error 1
